--- a/postgres-deployment.yaml
+++ b/postgres-deployment.yaml
@@ -19,7 +19,7 @@ spec:
             - name: POSTGRES_DB
               value: postgres
             - name: POSTGRES_USER
-              value: postgres
+              value: admin
             - name: POSTGRES_PASSWORD
               value: password
           ports:
