--- a/api-ingress.yaml
+++ b/api-ingress.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: api-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
 spec:
   ingressClassName: nginx
   rules:
