Implementa bien hpa y conf

--- a/api-ingress.yaml
+++ b/api-ingress.yaml
@@ -3,15 +3,10 @@ kind: Ingress
 metadata:
   name: api-ingress
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   ingressClassName: nginx
-  tls: 
-  - hosts:
-    - apik8s.duckdns.org
-    secretName: apik8s-tls
   rules:
   - host: apik8s.duckdns.org 
     http:
