--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: ana3lu/frontend:1.1.4
+          image: ana3lu/frontend:1.1.5
           ports:
-            - containerPort: 80
+            - name: http
+              containerPort: 80
