Cambia values.yaml

--- a/helm-chart-api/public-api/values.yaml
+++ b/helm-chart-api/public-api/values.yaml
@@ -70,7 +70,7 @@ ingress:
         - path: /api
           backendPort: 8080
           pathType: Prefix
-          backendServiceName: public-api-service
+          backendServiceName: public-api
         - path: /
           backendPort: 80
           pathType: Prefix
