--- a/helm-chart-api/public-api/templates/ingress.yaml
+++ b/helm-chart-api/public-api/templates/ingress.yaml
@@ -35,9 +35,9 @@ spec:
             {{- end }}
             backend:
               service:
-                name: {{ include "public-api.fullname" $ }}
+                name: {{ .backendServiceName }}
                 port:
-                  number: {{ $.Values.service.port }}
+                  number: {{ .backendPort }}
           {{- end }}
     {{- end }}
 {{- end }}
