--- a/helm-chart-api/public-api/values.yaml
+++ b/helm-chart-api/public-api/values.yaml
@@ -19,7 +19,7 @@ fullnameOverride: ""
 # This section builds out the service account more information can be found here: https://kubernetes.io/docs/concepts/security/service-accounts/
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Automatically mount a ServiceAccount's API credentials?
   automount: true
   # Annotations to add to the service account
@@ -46,12 +46,14 @@ securityContext: {}
 
 # This is for setting up a service more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/
 service:
+  name: public-api-service
   # This sets the service type more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types
   type: ClusterIP
   # This sets the ports more information can be found here: https://kubernetes.io/docs/concepts/services-networking/service/#field-spec-ports
   port: 8080
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
+  name: api-ingress
   enabled: true
   className: nginx
   annotations:
@@ -64,7 +66,7 @@ ingress:
         - path: /api
           backendPort: 8080
           pathType: Prefix
-          backendServiceName: public-api
+          backendServiceName: public-api-service
         - path: /
           backendPort: 80
           pathType: Prefix
@@ -85,16 +87,17 @@ resources:
     cpu: "200m"
     memory: "160Mi"
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
-livenessProbe:
-  httpGet:
-    path: /
-    port: http
-readinessProbe:
-  httpGet:
-    path: /
-    port: http
+livenessProbe: {}
+#  httpGet:
+#    path: /api/names
+#    port: http
+readinessProbe: {}
+#  httpGet:
+#    path: /api/names
+#    port: http
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
+  name: public-api-hpa
   enabled: true
   minReplicas: 1
   maxReplicas: 7
