--- a/helm-chart-api/public-api/templates/ingress.yaml
+++ b/helm-chart-api/public-api/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "public-api.fullname" . }}
+  name: {{ .Values.ingress.name }}
   labels:
     {{- include "public-api.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
