--- a/helm-chart-api/public-api/templates/service.yaml
+++ b/helm-chart-api/public-api/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "public-api.fullname" . }}
+  name: {{ .Values.service.name }}
   labels:
     {{- include "public-api.labels" . | nindent 4 }}
 spec:
