--- a/helm-chart-api/public-api/values.yaml
+++ b/helm-chart-api/public-api/values.yaml
@@ -87,14 +87,20 @@ resources:
     cpu: "200m"
     memory: "160Mi"
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
-livenessProbe: {}
-#  httpGet:
-#    path: /api/names
-#    port: http
-readinessProbe: {}
-#  httpGet:
-#    path: /api/names
-#    port: http
+livenessProbe: 
+  httpGet:
+    path: /api/names
+    port: http
+  initialDelaySeconds: 60  
+  periodSeconds: 20        
+  failureThreshold: 5 
+readinessProbe: 
+  httpGet:
+    path: /api/names
+    port: http
+  initialDelaySeconds: 60  
+  periodSeconds: 20        
+  failureThreshold: 5 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
   name: public-api-hpa
