--- a/helm-chart-api/public-api/values.yaml
+++ b/helm-chart-api/public-api/values.yaml
@@ -87,11 +87,18 @@ resources:
     cpu: "200m"
     memory: "160Mi"
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
+startupProbe:
+  httpGet:
+    path: /api/names
+    port: 8080
+  initialDelaySeconds: 300  # Espera 3 minutos antes de hacer la primera prueba
+  periodSeconds: 20         # Prueba cada 20 segundos
+  failureThreshold: 10 
 livenessProbe: 
   httpGet:
     path: /api/names
     port: 8080
-  initialDelaySeconds: 300  
+  initialDelaySeconds: 30  
   periodSeconds: 20          
   timeoutSeconds: 10          
   failureThreshold: 10  
@@ -99,7 +106,7 @@ readinessProbe:
   httpGet:
     path: /api/names
     port: 8080
-  initialDelaySeconds: 300  
+  initialDelaySeconds: 30 
   periodSeconds: 20         
   timeoutSeconds: 10          
   failureThreshold: 10   
