--- a/helm-chart-api/public-api/values.yaml
+++ b/helm-chart-api/public-api/values.yaml
@@ -89,26 +89,24 @@ resources:
 # This is to setup the liveness and readiness probes more information can be found here: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
 startupProbe:
   httpGet:
-    path: /api/names
+    path: /health
     port: 8080
-  initialDelaySeconds: 300  # Espera 5 minutos antes de hacer la primera prueba
+  initialDelaySeconds: 600  # Espera 5 minutos antes de hacer la primera prueba
   periodSeconds: 20         # Prueba cada 20 segundos
   failureThreshold: 10 
-
 livenessProbe: 
   httpGet:
-    path: /api/names
+    path: /health
     port: 8080
-  initialDelaySeconds: 30  
+  initialDelaySeconds: 60 
   periodSeconds: 20          
   timeoutSeconds: 10          
   failureThreshold: 10  
-
 readinessProbe: 
   httpGet:
-    path: /api/names
+    path: /health
     port: 8080
-  initialDelaySeconds: 30 
+  initialDelaySeconds: 60
   periodSeconds: 20         
   timeoutSeconds: 10          
   failureThreshold: 10   
