--- a/.github/workflows/build-helm.yml
+++ b/.github/workflows/build-helm.yml
@@ -25,10 +25,14 @@ jobs:
         run: |
           git clone --single-branch --branch ${{ env.BRANCH_HELM }} ${{ env.HELM_REPO }} helm-charts
 
+      - name: Copy Updated values.yaml to Helm Charts Repo
+        run: |
+          cp helm-chart-api/public-api/values.yaml helm-charts/public-api/values.yaml
+
       - name: Package Helm Chart
         run: |
-          cd helm-chart-api/public-api
-          helm package . -d ../../helm-charts/charts/
+          cd helm-charts/public-api
+          helm package . -d ../charts/
 
       - name: Update Helm Repo Index
         run: |
@@ -43,6 +47,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git remote set-url origin https://x-access-token:${{ secrets.GH_ACCESS_TOKEN }}@github.com/Ana3Lu/helm-charts-public-api.git
-          git add charts/ index.yaml
+          git add charts/ public-api/values.yaml index.yaml
           git commit -m "Update Helm chart for public-api - ${{ github.sha }}"
           git push origin ${{ env.BRANCH_HELM }}
