--- a/.github/workflows/build-helm.yml
+++ b/.github/workflows/build-helm.yml
@@ -25,6 +25,10 @@ jobs:
         run: |
           git clone --single-branch --branch ${{ env.BRANCH_HELM }} ${{ env.HELM_REPO }} helm-charts
 
+      - name: Remove old Helm package
+        run: |
+          rm -f helm-charts/charts/public-api-*.tgz
+
       - name: Copy Updated values.yaml to Helm Charts Repo
         run: |
           cp helm-chart-api/public-api/values.yaml helm-charts/public-api/values.yaml
