--- a/.github/workflows/build-helm.yml
+++ b/.github/workflows/build-helm.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Package Helm Chart
         run: |
-          cd helm-charts/public-api
-          helm package . -d ../charts/
+          cd helm-chart-api/public-api
+          helm package . -d ../../helm-charts/charts/
 
       - name: Update Helm Repo Index
         run: |
@@ -51,6 +51,6 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git remote set-url origin https://x-access-token:${{ secrets.GH_ACCESS_TOKEN }}@github.com/Ana3Lu/helm-charts-public-api.git
-          git add charts/ public-api/values.yaml index.yaml
+          git add charts/ index.yaml
           git commit -m "Update Helm chart for public-api - ${{ github.sha }}"
           git push origin ${{ env.BRANCH_HELM }}
