--- a/.github/workflows/build-helm.yml
+++ b/.github/workflows/build-helm.yml
@@ -1,4 +1,4 @@
-name: Build and Publish Helm Chart
+name: Build and Deploy Helm Chart
 
 on:
   push:
@@ -8,13 +8,12 @@ on:
 jobs:
   build-helm:
     runs-on: ubuntu-latest
-
     env:
       HELM_REPO: https://github.com/Ana3Lu/helm-charts-public-api.git
       BRANCH_HELM: 'gh-pages'
-
+    
     steps:
-      - name: Checkout Helm Manifiestos Repository
+      - name: Checkout k8s-manifests Repository
         uses: actions/checkout@v4
 
       - name: Install Helm
@@ -25,14 +24,14 @@ jobs:
         run: |
           git clone --single-branch --branch ${{ env.BRANCH_HELM }} ${{ env.HELM_REPO }} helm-charts
 
-      - name: Remove old Helm package
+      - name: Copy Updated values.yaml to Helm Charts Repo
         run: |
-          rm -f helm-charts/charts/public-api-*.tgz
+          cp helm-chart-api/public-api/values.yaml helm-charts/public-api/values.yaml
 
       - name: Package Helm Chart
         run: |
-          cd helm-chart-api/public-api
-          helm package . -d ../../helm-charts/charts/
+          cd helm-charts/public-api
+          helm package . -d ../charts/
 
       - name: Update Helm Repo Index
         run: |
@@ -47,6 +46,32 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git remote set-url origin https://x-access-token:${{ secrets.GH_ACCESS_TOKEN }}@github.com/Ana3Lu/helm-charts-public-api.git
-          git add charts/ index.yaml
+          git add charts/ public-api/values.yaml index.yaml
           git commit -m "Update Helm chart for public-api - ${{ github.sha }}"
           git push origin ${{ env.BRANCH_HELM }}
+
+  deploy-helm:
+    runs-on: ubuntu-latest
+    needs: build-helm  # Espera que el Chart se actualice antes de hacer el upgrade
+    env:
+      KUBECONFIG: /home/runner/.kube/config  # Configuración de kubeconfig
+      NAMESPACE: default 
+
+    steps:
+      - name: Checkout k8s-manifests Repository
+        uses: actions/checkout@v4
+
+      - name: Install Helm
+        run: |
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+
+      - name: Set up Kubeconfig
+        run: |
+          mkdir -p ~/.kube
+          echo "${{ secrets.KUBECONFIG }}" | base64 --decode > ~/.kube/config
+
+      - name: Upgrade & Install Helm Release
+        run: |
+          helm repo add my-public-api https://ana3lu.github.io/helm-charts-public-api/
+          helm repo update
+          helm upgrade --install public-api my-public-api/public-api --namespace $NAMESPACE --force
